--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Stela Co. Predictive Reading</title>
+<title>Recommender Model - Home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,10 +19,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="{{ url_for('index') }}" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <!-- not using
     <a href="{{ url_for('raw_data') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Data</a>
+    -->
     <a href="{{ url_for('pandas') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Our Model</a>
+    <!-- not using
     <a href="{{ url_for('api') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">API</a>
     <a href="{{ url_for('documents') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Documentation</a>
+      -->
   </div>
 
   <!-- Navbar on small screens -->
@@ -37,8 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">About Us</h1>
-  <!-- <p class="w3-xlarge">Template by w3.css</p> -->
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
+  <p class="w3-text-dark-grey w3-auto">What is a Stela? Why such a funky-sounding name? Well, a stela is an upright stone marked writings such as inscriptions dedicated to important persons or events. That name lends a sense of importance for how we wish to bring writing and reading to our customers. </p>
 </header>
 
 <!-- First Grid -->
@@ -46,11 +49,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Our Mission</h1>
-      <h5 class="w3-padding-32">Started in 2015, we at Stela seek to bring readers the latest titles and focus on the latest trends in literature.  </h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h5 class="w3-padding-32">We at Stela seek to bring readers the titles they crave.  </h5>
+      <p class="w3-text-grey">With our algorithm, we return 10 choices of titles based on the title you enter. This is based on the content of that title.</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -70,11 +70,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1>How do we do it?</h1>
-      <h5 class="w3-padding-32">What we want to know is which books are going to be popular (have the highest number of total reviews) based on a certain set of criteria. </h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h5 class="w3-padding-32">What we want to provide you with recommendations based on the choices you enter. </h5>
+      <p class="w3-text-grey">Just enter your title, and our algorithm will do the rest. Easy, right? That's just the way we want it too. So, keep on reading, everybody. .</p>
     </div>
   </div>
 </div>
