fixed database and added autocomplete

--- a/templates/pandas.html
+++ b/templates/pandas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Model</title>
@@ -15,6 +16,10 @@
       .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
       /* .fa-anchor,.fa-coffee {font-size:200px} */
     </style>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="static/js/auto.js"></script>
+
 </head>
 <body>
     <div class="w3-top">
@@ -42,9 +47,12 @@
     <div class = "login">
       <h1>Enter a book title</h1>
 
-      <form action="{{ url_for('results') }}" method="post">
-        <input type="text" name="booktitle" placeholder="Book Title" required="required" />
+      <form autocomplete="off" action="{{ url_for('results') }}" method="post">
+        
+        <input id="tags" type="text" name="booktitle" placeholder="Book Title" required="required" />
+       
         <button type="submit" class="btn">Submit</button>
+      
       </form>
       <form action="{{ url_for('pandas') }}">
         <button type="submit" class="btn">Clear</button>
@@ -74,6 +82,7 @@
   
 </div>
 
+
 <script>
   // Used to toggle the menu on small screens when clicking on the menu button
   function myFunction() {
@@ -85,6 +94,8 @@
     }
   }
   </script>
+
+  
 
 </body>
 </html>
